--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "FluStrom",
+  "license": "private",
+  "author": "Juan",
   "version": "0.0.1",
-  "description": "Base para proyecto Strom",
-  "main": "server.js",
+  "dependencies": {
+    "mongoose": "^4.0.2",
+    "socket.io": "^1.3.5",
+    "express": "^4.12.3",
+    "body-parser": "^1.12.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Juan",
-  "license": "private",
-  "dependencies": {
-    "body-parser": "^1.12.3",
-    "express": "^4.12.3",
-    "mongoose": "^4.0.2",
-    "socket.io": "^1.3.5"
-  }
+  "main": "server.js",
+  "description": "Base para proyecto Strom"
 }
