--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "author": "Juan",
   "version": "0.0.1",
   "dependencies": {
-    "mongoose": "^4.0.2",
-    "socket.io": "^1.3.5",
+    "body-parser": "^1.12.3",
+    "cors": "^2.7.1",
     "express": "^4.12.3",
-    "body-parser": "^1.12.3"
+    "mongoose": "^4.0.2",
+    "socket.io": "^1.3.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
