--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.12.3",
     "cors": "^2.7.1",
     "express": "^4.12.3",
+    "moment": "^2.10.6",
     "mongoose": "^4.0.2",
     "socket.io": "^1.3.5"
   },
