--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "socket.io": "^1.3.5"
   },
   "scripts": {
+    "prestart": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
