--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.12.3",
     "moment": "^2.10.6",
     "mongoose": "^4.0.2",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "prestart": "npm install",
