--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "version": "0.0.1",
   "dependencies": {
     "body-parser": "^1.12.3",
+    "bson": "^0.4.12",
     "cors": "^2.7.1",
     "express": "^4.12.3",
     "moment": "^2.10.6",
-    "mongoose": "^4.0.2",
+    "mongoose": "^4.1.9",
     "socket.io": "^1.3.5",
     "underscore": "^1.8.3"
   },
