--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "moment": "^2.10.6",
     "mongoose": "^4.1.8",
     "socket.io": "^1.3.5",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "underscore.string": "^3.2.2"
   },
   "scripts": {
     "prestart": "npm install",
